force-app/main/default/objects/RecordAccessLog__c/RecordAccessLog__c.object-meta.xml
<CustomObject>
    <label>Record Access Log</label>
    <pluralLabel>Record Access Logs</pluralLabel>
    <nameField>
        <displayFormat>RAL-{0}</displayFormat>
        <label>Record Access Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>