force-app/main/default/objects/RecordAccessLog__c/fields/AccessTime__c.field-meta.xml
<CustomField>
    <fullName>AccessTime__c</fullName>
    <externalId>false</external>
    <label>Access Time</label>
    <type>DateTime</type>
</CustomField>