force-app/main/default/objects/RecordAccessLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Record Access Logs</relationshipLabel>
    <relationshipName>Record_Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>